Bug 339304 - wrong tag list in the filter
Summary: wrong tag list in the filter
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-22 15:01 UTC by Philippe ROUBACH
Modified: 2014-10-02 07:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2014-09-22 15:01:38 UTC
in kmail i created 2 tags "vélo" , "santé"
in kaddressbook i created several other tags

in kmail i can tag a message by selecting a tag in a list of tags . this list is good. i can find the 2 tags created in kmail and the others created in kaddressbook .

in kmail i can filter the messages by selecting a user tag but in this list i can find only the tags created in kmail . the tags created in kaddressbook are not there .



Reproducible: Always
Comment 1 Philippe ROUBACH 2014-09-22 15:02:58 UTC
opensuse 13.1 kde 4.14.1
Comment 2 Laurent Montel 2014-10-02 06:15:09 UTC
How did you do ?
In kaddressbook + create tag with filter dialog from kmail opened ?
Comment 3 Laurent Montel 2014-10-02 06:28:49 UTC
Git commit 11f903573d2ab0dfeed00fafec294d59df1cfe29 by Montel Laurent.
Committed on 02/10/2014 at 06:27.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 339304 - wrong tag list in the filter

Update combobox when we create new tag
FIXED-IN: 4.12.2

M  +22   -8    mailcommon/filter/filteractionaddtag.cpp
M  +6    -0    mailcommon/filter/filteractionaddtag.h

http://commits.kde.org/kdepim/11f903573d2ab0dfeed00fafec294d59df1cfe29
Comment 4 Laurent Montel 2014-10-02 06:29:16 UTC
I updated combobox when we create new tag.
Regards
Comment 5 Philippe ROUBACH 2014-10-02 07:22:43 UTC
(In reply to Laurent Montel from comment #2)
> How did you do ?
> In kaddressbook + create tag with filter dialog from kmail opened ?

i use kontact then all the pim suite is opened

in kaddressbook i open a contact 
then
in the tab "tab"
i click on "..." at the right of the field "catégories"
then
i type a tag
then
i click on "créer une nouvelle catégorie"