Fix Bug 339304 - wrong tag list in the filter

Update combobox when we create new tag

BUG: 339304
FIXED-IN: 4.12.2